manifests/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop
  namespace: shop-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: shop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shop-app
  name: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: r.k8s.kakuom.com/shop:latest
          name: shop-web
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 100
            timeoutSeconds: 5
