manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shop
  namespace: shop-app
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - shop.k8s.kakuom.com
      secretName: shop-tls-cert
  rules:
    - host: shop.k8s.kakuom.com
      http:
        paths:
          - path: /
            backend:
              serviceName: shop
              servicePort: 8080
